--- a/templates/navside.html
+++ b/templates/navside.html
@@ -49,6 +49,7 @@
                             </div>
                         </a>
                     </li>
+                    {% if not staff %}
                     <li class="navigation-list-item">
                         <a class="navigation-link" href="employee">
                             <div class="row">
@@ -62,6 +63,8 @@
                             </div>
                         </a>
                     </li>
+                    {% endif %}
+                    {% if not staff %}
                     <li class="navigation-list-item">
                         <a class="navigation-link" href="measurement">
                             <div class="row">
@@ -74,6 +77,7 @@
                             </div>
                         </a>
                     </li>
+                    {% endif %}
                     <li class="navigation-list-item">
                         <a class="navigation-link" href="account">
                             <div class="row">
