--- a/templates/billing.html
+++ b/templates/billing.html
@@ -7,6 +7,12 @@
     .tborderTop{
         border-top: 1px solid gray;
     }
+    .borderNone{
+        border-top: none;
+        border-left: none;
+        border-right:none;
+        border-color: darkgrey;
+    }
 </style>
     <div class="container-fluid">
         <div class="p-3">
@@ -17,14 +23,14 @@
                             <th scope="col" class="d-flex justify-content-middle border-bottom-0" style="font-size: 54px; " colspan="4">Invoice</th>
                         </tr>
                         <tr>
-                            <th colspan="2"></th>
-                            <th colspan="2">
+                            <th colspan="3"></th>
+                            <th colspan="3">
                                 <label for="Date">Date:</label><label for="dateData"></label>
                             </th>
                         </tr>
                         <tr>
-                            <th colspan="2"></th>
-                            <th colspan="2">
+                            <th colspan="3"></th>
+                            <th colspan="3">
                                 <label for="Invoice_No" >Invoice No:</label><label for="Invoice_NoData"></label>
                             </th>
                         </tr>
@@ -40,10 +46,10 @@
                     <tbody>
                     <tr>
                         <td scope="row">1</td>
-                        <td>Pant</td>
-                        <td>1</td>
-                        <td>350</td>
-                        <td>350</td>
+                        <td><input type="text" value="Pant"class="borderNone"  disabled ></td>
+                        <td><input type="number" class="borderNone" min="0"></td>
+                        <td><input type="number"class="borderNone"  min="0"></td>
+                        <td><label for="total">123</label></td>
                     </tr>
                     </tbody>
                     <tfoot>
@@ -55,14 +61,14 @@
                         <tr>
                             <th scope="row">Discount Amount</th>
                             <td colspan="3"></td>
-                            <td><label for="discountData">0</label></td>
+                            <td><input type="number" class="borderNone" min="0"></td>
                         </tr>
                         <tr>
                             <th scope="row">VAT</th>
                             <td colspan="3"></td>
                             <td><label for="VAT">13%</label></td>
                         </tr>
-                        <tr>
+                        <!-- <tr>
                             <th scope="row">Paid</th>
                             <td colspan="3"></td>
                             <td><label for="Paid">0</label></td>
@@ -71,7 +77,7 @@
                             <th scope="row">Due</th>
                             <td colspan="3"></td>
                             <td><label for="Due">0</label></td>
-                        </tr>
+                        </tr> -->
                         <tr>
                             <th scope="row" colspan="3"></th>
                             <th>Net Total</th>
