employee page edited

--- a/templates/employeelanding.html
+++ b/templates/employeelanding.html
@@ -14,17 +14,17 @@
                     <table class="table">
                         <thead class="thead-dark">
                             <tr>
-                                <th class="th">#</th>
+                                <th class="th">S.N</th>
                                 <th class="th">Name</th>
                                 <th class="th">Email</th>
                                 <th class="th">Number</th>
                                 <th class="th">Address</th>
-                                <th class="th" colspan="2">Actions</th>
-                                <style>
+                                <!-- <th class="th" colspan="2">Actions</th> -->
+                                <!-- <style>
                                     .th{
                                         text-align: center;
                                     }
-                                </style>
+                                </style> -->
                             </tr>
                         </thead>
                         <tbody>
@@ -35,8 +35,8 @@
                                 <td><label for="total" name="total">{{e.email}}</label></td>
                                 <td><label for="advance" name="advance">{{e.number}}</label></td>
                                 <td><label for="remaning" name="remaining">{{e.address}}</label></td>
-                                <td class="th"><button class="btn btn-dark">Change</button>
-                                <button class="btn btn-dark">Delete</button></td>
+                                <!-- <td class="th"><button class="btn btn-dark">Change</button>
+                                <button class="btn btn-dark">Delete</button></td> -->
                               </tr>
                         {% endfor %}
                         </tbody>
