--- a/templates/navside.html
+++ b/templates/navside.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="brand-name-container">
                         <p class="brand-name">
-                            Collection & Creation<br>
+                            {{vendor}}<br>
                         </p>
                     </div>
                 </div>
