--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,7 +20,7 @@
                             <h6>No. of Orders</h6>
                         </div>
                         <div class="card-txt">
-                            <label for="detail">901823</label>
+                            <label for="detail">{{orders}}</label>
                         </div>
                     </div>
                     <div class="flex-column">
@@ -36,10 +36,10 @@
                 <div class="d-flex flex-row p-3">
                     <div class="flex-column ">
                         <div class="card-content">
-                            <h6>No. of Orders</h6>
+                            <h6>No. of Employees</h6>
                         </div>
                         <div class="card-txt">
-                            <label for="detail">901823</label>
+                            <label for="detail">{{employees}}</label>
                         </div>
                     </div>
                     <div class="flex-column">
