--- a/templates/Measurement.html
+++ b/templates/Measurement.html
@@ -1,6 +1,11 @@
 {% extends 'navside.html'%}
 {% block content%}
 {% if not reg%}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css"/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <div class="form-box">
     <form action="customer_store" method="POST" enctype="multipart/form-data" class="needs-validation" novalidate>
         {% csrf_token %}
@@ -96,11 +101,13 @@
 
         <section class="customer_measurement container-fluid row">
             <div class="measurement_table col-3">
-                <select name="category" multiple data-live-search="true" class="form-select selectpicker" aria-label="Default select example">
-                {% for c in category %}
-                    <option value={{c.id}} selected>{{c.name}}</option>
-                {% endfor %}
-                  </select>
+
+                <div class="form-group" id="description">
+                    <label for="des">Description: </label>
+                    <input name="des" class="form-control" placeholder="Enter description" width: 50%;>
+                </div>
+                <button id="descriptionAlternate" type="button" class="btn btn-primary">Another Description</button>
+
                 <table class="table mytable">
                     <thead>
                     <tr>
@@ -110,7 +117,6 @@
                                 .th{
                                     text-align: center;
                                 }
-
                         </style>
                     </tr>
                     </thead>
@@ -173,6 +179,8 @@
                             clientId: 'b12786d751331e33ed4eed5ea8eb1827',
                             boardCode: '361249e0-feca-4acb-8483-66cf4d2ad409'
                         });
+
+
                     </script>
                     </body>
                 </div>
@@ -214,6 +222,8 @@
           }, false);
         })();
 
+
+
 </script>
 <!-- customer_photo -->
 <script type="text/javascript">
@@ -226,12 +236,12 @@
                 document.getElementById("uploadPreview").src = oFREvent.target.result;
             };
         };
-    
-        $('select').selectpicker();
-</script>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+
+        $('#descriptionAlternate').on('click',function() {
+          $('#description').append('<div class="form-group" id="altdes"><label for="">Another Location: </label> <input name = "des" class="form-control" placeholder="Enter Another Description" width: 50%;></div>');
+         });
+
+
+</script>
 {%endblock%}
