--- a/templates/navside.html
+++ b/templates/navside.html
@@ -37,7 +37,11 @@
                     </span>
                 </div>
                 <ul class="navigation-list">
+                    {% if dashboard %}
                     <li class="navigation-list-item active">
+                    {% else %}
+                    <li class="navigation-list-item ">
+                    {% endif %}
                         <a class="navigation-link" href="dashboard">
                             <div class="row">
                                 <div class="col-2">
@@ -50,8 +54,12 @@
                         </a>
                     </li>
                     {% if not staff %}
-                    <li class="navigation-list-item">
-                        <a class="navigation-link" href="employee">
+                    {% if employ %}
+                    <li class="navigation-list-item active">
+                    {% else %}
+                    <li class="navigation-list-item ">
+                    {% endif %}
+                    <a class="navigation-link" href="employee">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-users"></i>
@@ -65,8 +73,12 @@
                     </li>
                     {% endif %}
                     {% if not staff %}
+                    {% if measurement %}
+                    <li class="navigation-list-item active">
+                    {% else %}
                     <li class="navigation-list-item">
-                        <a class="navigation-link" href="measurement">
+                    {% endif %}
+                    <a class="navigation-link" href="measurement">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-edit"></i>
@@ -78,8 +90,12 @@
                         </a>
                     </li>
                     {% endif %}
+                    {% if accounts %}
+                    <li class="navigation-list-item active">
+                    {% else %}
                     <li class="navigation-list-item">
-                        <a class="navigation-link" href="account">
+                    {% endif %}
+                    <a class="navigation-link" href="account">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-calculator"></i>
@@ -90,8 +106,13 @@
                             </div>
                         </a>
                     </li>
+
+                    {% if order_nav %}
+                    <li class="navigation-list-item active">
+                    {% else %}
                     <li class="navigation-list-item">
-                        <a class="navigation-link" href="order">
+                    {% endif %}
+                    <a class="navigation-link" href="order">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-address-book"></i>
