--- a/templates/billing.html
+++ b/templates/billing.html
@@ -69,6 +69,11 @@
                             <td><label for="VAT">13%</label></td>
                         </tr>
                         <tr>
+                            <th scope="row">Advance</th>
+                            <td colspan="3"></td>
+                            <td><input type="number" name="advance" class="borderNone" min="0"></td>
+                        </tr>
+                        <tr>
                             <th scope="row" colspan="3"></th>
                             <th>Net Total</th>
                             <td><input type="number" name="nettotal" value="0" class="borderNone" id="price" onchange="calculateTotal();" min="0"></td>
