--- a/templates/order.html
+++ b/templates/order.html
@@ -21,7 +21,7 @@
                 <thead class="thead-dark">
                     <tr>
                         <th class="th">#</th>
-                        <th class="th">Name</th>
+                        <th class="th">Customer Name</th>
                         <th class="th">Order-date</th>
                         <th class="th">Number</th>
                         <th class="th">Email</th>
@@ -43,7 +43,7 @@
                         <td><label for="number" name="number">{{order.customer_measurement.customer.number}}</label></td>
                         <td><label for="email" name="email">{{order.customer_measurement.customer.email}}</label></td>
                         <td><a href=""><label for="measurement" name="measurement">{{order.customer_measurement}}</label></a></td>
-                        <td><label for="status" name="status"><i class="fa fa-toggle-on"></i></label></td>
+                        <td><label for="status" name="status">{{order.status}}</label></td>
                         <td><label for="advance" name="advance"></label></td>
                       </tr>
                 {% else %}
