--- a/templates/Measurement.html
+++ b/templates/Measurement.html
@@ -101,13 +101,17 @@
 
         <section class="customer_measurement container-fluid row">
             <div class="measurement_table col-3">
-
-                <div class="form-group" id="description">
+                <div class="category mb-2">
                     <label for="des">Description: </label>
-                    <input name="des" class="form-control" placeholder="Enter description" width: 50%;>
+                    <div class="d-flex">
+                        <div class="form-group d-flex flex-column" id="description">
+                            <input name="des" class="form-control" placeholder="Enter description">
+                        </div>
+                        <div class="d-flex flex-column">
+                            <button id="descriptionAlternate" type="button" class="btn btn-success" style="margin-left: 6px;">+</button>
+                        </div>
+                    </div>
                 </div>
-                <button id="descriptionAlternate" type="button" class="btn btn-primary">Another Description</button>
-
                 <table class="table mytable">
                     <thead>
                     <tr>
@@ -168,11 +172,9 @@
                     </tbody>
                 </table>
             </div>
-            <div class="whiteboard col-9">
-                <div class="row">
-                    <body>
-                    <div style="width: 600px; height: 550px;" id="wt-container"></div>
-
+            <div class="col-1"></div>
+            <div class="whiteboard col-8" style="box-shadow: 0px 0px 10px grey;">
+                    <div style="width: 100%;  height: 650px;" id="wt-container"></div>
                     <script src="https://www.whiteboard.team/dist/api.js"></script>
                     <script type="text/javascript">
                         var wt = new api.WhiteboardTeam('#wt-container', {
@@ -182,9 +184,6 @@
 
 
                     </script>
-                    </body>
-                </div>
-                <div class="row"></div>
             </div>
         </section>
         <section class="invoice">
